# arke_application

./: README.md  all_users.json
artifacts/: KeyValueStore.json  KeyValueStore_metadata.json
client/: Cargo.toml
client/src/: arke_frontend.rs  contact_discovery.rs  contacts.json  create_group.rs  delete_friend.rs  discovery_info.rs  group_chat.rs  key_value_store.abi  key_value_store_frontend.rs  main.rs  main_menu_option0.rs  main_menu_option1.rs  main_menu_option2.rs  main_menu_option3.rs  private_chat_and_pay.rs  user.rs
client_copy/src/: arke_frontend.rs  contacts.json  main.rs  main_menu_option0.rs  main_menu_option1.rs  main_menu_option2.rs  main_menu_option3.rs
database_server/: Cargo.toml
database_server/src/: main.rs  server.rs
frontend/: .gitignore  Cargo.toml
frontend/src/: KeyValueStore.abi  MainMenuOption0.rs  MainMenuOption1.rs  MainMenuOption2.rs  arke_frontend.rs  contacts.json  frontend.rs  key_value_store_frontend.rs  main.rs  main_menu_option0.rs  main_menu_option1.rs  main_menu_option2.rs  main_menu_option3.rs  my_info.json
frontend_copy/: .gitignore  Cargo.toml
frontend_copy/src/: contacts.json  key_value_store.abi  key_value_store_frontend.rs  main.rs  main_menu_option0.rs  main_menu_option1.rs  main_menu_option2.rs  my_info.json
key_issuing_authority/: Cargo.toml
key_issuing_authority/src/: key_issuing_authority.rs  main.rs  server.rs
registration_authority/: Cargo.toml
registration_authority/src/: main.rs  registration_authority.rs  server.rs
server/: Cargo.toml
server/src/: all_users.json  server.rs
store/: truffle-config.js
store/contracts/: KeyValueStore.sol
store/migrations/: 1_initial_migration.js
store/test/: KeyValueStore.js
