[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web3 = "0.18.0"
tokio = { version = "1.15.0", features = ["full"] }
secp256k1 = "0.21.0"
tracing-subscriber = "0.3.17"
arke_core = { git = "https://github.com/asonnino/arke.git", branch = "main" }
hash_functions = { git = "https://github.com/asonnino/arke.git", branch = "main" }
secret_sharing = { git = "https://github.com/asonnino/arke.git", branch = "main" }
ark-bls12-377 = { version = "0.3.0", features = [ "r1cs" ] }
ark-bw6-761 = "0.3.0"
ark-crypto-primitives = "0.3.0"
ark-ec = "0.3.0"
ark-ff = "0.3.0"
ark-serialize = "0.3.0"
ark-std = "0.3.0"
rand = "0.8.5"
serde = { version = "1.0.133", features = ["derive"] }
serde_bytes = "0.11.9"
serde_json = "1.0"
thiserror = "1.0.37"
bincode = "1.3.3"
tiny-keccak = "2.0.2"
hex = "0.4.2"
dialoguer = {version = "0.10.4", features = ["fuzzy-select"]}
base64 = "0.13"