[package]
name = "key_issuing_authority"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.15.0", features = ["full"] }
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0"
ark-ec = "0.3.0"
ark-bls12-377 = { version = "0.3.0", features = [ "r1cs" ] }
arke_core = { git = "https://github.com/asonnino/arke.git", branch = "main" }
secret_sharing = { git = "https://github.com/asonnino/arke.git", branch = "main" }
ark-serialize = "0.3.0"
ark-std = "0.3.0"
rand = "0.8.5"
ark-bw6-761 = "0.3.0"
ark-ff = "0.3.0"
base64 = "0.13"